minitrace-macro/tests/ui/err/has-name-and-path-name.rs
use minitrace::trace;

#[trace(name = "Name", path_name = true)]
fn f() {}

fn main() {}
